fix filter text-wrapping issue
we had an issue here where text wasn't wrapping when it should, leading
to an overflow out the right side of the filter label.

closes #337
pr #344

--- a/src/css/search-filter.scss
+++ b/src/css/search-filter.scss
@@ -149,7 +149,6 @@
     display: inline-flex;
     align-items: center;
     flex-wrap: nowrap;
-    white-space: nowrap;
     border: 1px solid $font-gray-mid;
     border-radius: 14px;
 
